<resources>
    <string name="app_name">CMPE277Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_tutors">Tutors</string>
    <string name="menu_profile">Edit Profile</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_tutor">Tutor Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="login_failed">Incorrect Email or Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="register">Register</string>
    <string name="username_required">Username required</string>
    <string name="password_required">Password required</string>
    <string name="name_required">Name required</string>
    <string name="email_required">Email required</string>
    <string name="confirm_password_required">Confirm Password</string>
    <string name="phone_number_required">Phone number required</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="created_user">User Created</string>
    <string name="user_updated">User Updated</string>
    <string name="email_exists">Email already exists, pick a different one</string>
    <string name="tab_text_1">Student</string>
    <string name="tab_text_2">Tutor</string>
    <string name="price">Price</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="tutor_visible">Appear Visible</string>
    <string name="description_required">Description Required</string>
    <string name="subject_required">Subject Required</string>
    <string name="price_required">Price Required</string>
    <string name="tutor_info">Tutor Info</string>
    <string name="tutor_updated">Tutor Information updated</string>
    <string name="select_date">Select date</string>
    <string name="time_already_selected">Time already selected</string>
    <string name="pending">Pending</string>
    <string name="tutor_session_removed">Tutor Session Removed</string>
    <string name="tutor_session_added">Tutor Session Added to Schedule</string>
    <string name="schedule_error">Scheduling error, please make space or remove</string>

    <string name="wifi_disconnected">Cannot connect to network, please establish a connection</string>
    <string name="request_error">Issue contacting api, check internet connection or server status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="baseURL_">http://androidserver-env.pu4bpkgsqn.us-west-1.elasticbeanstalk.com/student</string>
</resources>
