<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tutors"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_tutors" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/pending" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/menu_schedule" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>
