<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tutors">

    <fragment
        android:id="@+id/nav_tutors"
        android:name="com.ben.cmpe277.cmpe277project.ui.tutorslist.TutorListFragment"
        android:label="@string/menu_tutors"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ben.cmpe277.cmpe277project.ui.editprofile.EditProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_pending"
        android:name="com.ben.cmpe277.cmpe277project.ui.pendingsessions.PendingTutorSessionFragment"
        android:label="@string/pending"
        tools:layout="@layout/fragment_tutorsession_list" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.ben.cmpe277.cmpe277project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.ben.cmpe277.cmpe277project.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>