<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="281dp">

        <ImageView
            android:layout_width="298dp"
            android:layout_height="168dp"
            android:layout_marginTop="50dp" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#ffffff"
            android:hint="@string/username"
            android:inputType="textPassword"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="30dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textSize="23dp"
            android:background="#5901171A"
            android:textColor="#ffffff"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:text="@string/not_registered" />

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="@string/register" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>