<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/tutor_info"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/enable_profile_tutor_edit_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="Edit"
            android:textColor="#FFFFFF"
            android:textSize="23sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/tutor_visible" />

            <Switch
                android:id="@+id/edit_profile_tutor_visible_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="190dp"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/description" />

            <EditText
                android:id="@+id/edit_profile_tutor_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/subject" />

            <EditText
                android:id="@+id/edit_profile_tutor_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/price" />

            <EditText
                android:id="@+id/edit_profile_tutor_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="20dp">


            <Button
                android:id="@+id/edit_profile_tutor_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="Confirm" />

            <Button
                android:id="@+id/edit_profile_tutor_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="Cancel"
                android:textColor="#ff0000" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>